# cases-77656274726f6e696373-encode-end-point

./: README.md  pyproject.toml
api/: handlers.py  middlewares.py  schemas.py  server.py
core/: encoder.py
core/test/: test_encoder.py
